--- a/ui/ui.ui
+++ b/ui/ui.ui
@@ -3358,7 +3358,7 @@ QPushButton:pressed{
               <item>
                <widget class="StackedWidget" name="hwStackedWidget">
                 <property name="currentIndex">
-                 <number>3</number>
+                 <number>2</number>
                 </property>
                 <widget class="QWidget" name="infoPage">
                  <property name="styleSheet">
@@ -4729,7 +4729,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                       <rect>
                        <x>0</x>
                        <y>0</y>
-                       <width>1089</width>
+                       <width>1210</width>
                        <height>461</height>
                       </rect>
                      </property>
@@ -6061,16 +6061,16 @@ background-color: rgb(89, 88, 88);
                   <item>
                    <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0,1,0">
                     <property name="leftMargin">
-                     <number>11</number>
+                     <number>0</number>
                     </property>
                     <property name="topMargin">
-                     <number>11</number>
+                     <number>0</number>
                     </property>
                     <property name="rightMargin">
-                     <number>11</number>
+                     <number>0</number>
                     </property>
                     <property name="bottomMargin">
-                     <number>11</number>
+                     <number>0</number>
                     </property>
                     <item>
                      <layout class="QHBoxLayout" name="horizontalLayout_107" stretch="1,1,1,1">
@@ -6343,7 +6343,7 @@ border:1px solid gray;
                      </layout>
                     </item>
                     <item>
-                     <layout class="QHBoxLayout" name="horizontalLayout_109" stretch="6,4">
+                     <layout class="QHBoxLayout" name="horizontalLayout_109" stretch="6,5">
                       <property name="leftMargin">
                        <number>0</number>
                       </property>
@@ -6358,18 +6358,18 @@ color:rgb(188, 188, 188);
 }
 </string>
                         </property>
-                        <layout class="QVBoxLayout" name="verticalLayout_82">
+                        <layout class="QVBoxLayout" name="verticalLayout_82" stretch="0,0,0,0,0,0">
                          <property name="spacing">
                           <number>0</number>
                          </property>
                          <property name="leftMargin">
-                          <number>11</number>
+                          <number>0</number>
                          </property>
                          <property name="topMargin">
                           <number>0</number>
                          </property>
                          <property name="rightMargin">
-                          <number>30</number>
+                          <number>20</number>
                          </property>
                          <property name="bottomMargin">
                           <number>0</number>
@@ -6703,21 +6703,21 @@ color:rgb(188, 188, 188);
                       </item>
                       <item alignment="Qt::AlignVCenter">
                        <widget class="QFrame" name="calibFrame">
-                        <layout class="QVBoxLayout" name="verticalLayout_66" stretch="4,1,2">
+                        <layout class="QVBoxLayout" name="verticalLayout_66" stretch="4,0,0">
                          <property name="spacing">
                           <number>7</number>
                          </property>
                          <property name="leftMargin">
-                          <number>30</number>
+                          <number>20</number>
                          </property>
                          <property name="topMargin">
-                          <number>30</number>
+                          <number>0</number>
                          </property>
                          <property name="rightMargin">
-                          <number>11</number>
+                          <number>0</number>
                          </property>
                          <property name="bottomMargin">
-                          <number>30</number>
+                          <number>0</number>
                          </property>
                          <item>
                           <widget class="QFrame" name="calibFrame0">
@@ -6777,7 +6777,39 @@ color:rgb(188, 188, 188);
                               </property>
                              </widget>
                             </item>
+                            <item row="2" column="0">
+                             <widget class="QLabel" name="lblCurrentCoeff">
+                              <property name="font">
+                               <font>
+                                <family>Arial</family>
+                                <pointsize>20</pointsize>
+                               </font>
+                              </property>
+                              <property name="text">
+                               <string>Current Coeff</string>
+                              </property>
+                             </widget>
+                            </item>
                             <item row="2" column="1">
+                             <widget class="QLineEdit" name="txtCurrentCoeff">
+                              <property name="font">
+                               <font>
+                                <family>Arial</family>
+                                <pointsize>20</pointsize>
+                               </font>
+                              </property>
+                              <property name="text">
+                               <string/>
+                              </property>
+                              <property name="alignment">
+                               <set>Qt::AlignCenter</set>
+                              </property>
+                              <property name="readOnly">
+                               <bool>true</bool>
+                              </property>
+                             </widget>
+                            </item>
+                            <item row="3" column="1">
                              <spacer name="verticalSpacer_46">
                               <property name="orientation">
                                <enum>Qt::Vertical</enum>
@@ -6790,7 +6822,7 @@ color:rgb(188, 188, 188);
                               </property>
                              </spacer>
                             </item>
-                            <item row="3" column="1">
+                            <item row="4" column="1">
                              <widget class="QPushButton" name="btnApplyCoeff">
                               <property name="font">
                                <font>
@@ -6823,21 +6855,21 @@ border: 1px solid white;
                           </widget>
                          </item>
                          <item>
-                          <spacer name="verticalSpacer_83">
+                          <spacer name="verticalSpacer_13">
                            <property name="orientation">
                             <enum>Qt::Vertical</enum>
                            </property>
                            <property name="sizeHint" stdset="0">
                             <size>
                              <width>20</width>
-                             <height>60</height>
+                             <height>40</height>
                             </size>
                            </property>
                           </spacer>
                          </item>
-                         <item alignment="Qt::AlignHCenter">
+                         <item>
                           <widget class="QFrame" name="horizontalFrame_4">
-                           <layout class="QHBoxLayout" name="horizontalLayout_111">
+                           <layout class="QHBoxLayout" name="horizontalLayout_111" stretch="1,0,1">
                             <property name="leftMargin">
                              <number>0</number>
                             </property>
