--- a/ui/ui.ui
+++ b/ui/ui.ui
@@ -60,7 +60,7 @@ QScrollBar:vertical {
 }</string>
       </property>
       <property name="currentIndex">
-       <number>6</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="adssPage">
        <property name="styleSheet">
@@ -3358,7 +3358,7 @@ QPushButton:pressed{
               <item>
                <widget class="StackedWidget" name="hwStackedWidget">
                 <property name="currentIndex">
-                 <number>2</number>
+                 <number>0</number>
                 </property>
                 <widget class="QWidget" name="infoPage">
                  <property name="styleSheet">
@@ -4729,7 +4729,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
                       <rect>
                        <x>0</x>
                        <y>0</y>
-                       <width>1210</width>
+                       <width>1089</width>
                        <height>461</height>
                       </rect>
                      </property>
@@ -8002,12 +8002,12 @@ border: 10px solid rgb(77, 77, 77);
       <widget class="QWidget" name="tutorialPage">
        <layout class="QVBoxLayout" name="verticalLayout_42">
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_41" stretch="0,1">
+         <layout class="QVBoxLayout" name="verticalLayout_41" stretch="0,0">
           <property name="rightMargin">
            <number>0</number>
           </property>
           <property name="bottomMargin">
-           <number>30</number>
+           <number>0</number>
           </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_30" stretch="0,0,0">
@@ -8114,9 +8114,45 @@ border:3px solid red;
            </layout>
           </item>
           <item>
-           <widget class="QFrame" name="gridFrame_2">
+           <widget class="QScrollArea" name="scrollArea_2">
             <property name="styleSheet">
-             <string notr="true">QPushButton {
+             <string notr="true">background: transparent;</string>
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::NoFrame</enum>
+            </property>
+            <property name="horizontalScrollBarPolicy">
+             <enum>Qt::ScrollBarAlwaysOff</enum>
+            </property>
+            <property name="widgetResizable">
+             <bool>true</bool>
+            </property>
+            <widget class="QWidget" name="scrollAreaWidgetContents_2">
+             <property name="geometry">
+              <rect>
+               <x>0</x>
+               <y>0</y>
+               <width>1618</width>
+               <height>678</height>
+              </rect>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_36">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+              <item>
+               <widget class="QFrame" name="gridFrame_2">
+                <property name="styleSheet">
+                 <string notr="true">QPushButton {
 background-color: rgb(0, 0, 0);
 	min-width:350;
 	min-height:250;
@@ -8126,9 +8162,18 @@ background-color: rgb(0, 0, 0);
     border-radius:10px;
 	color:white;
 	font: 14pt &quot;Arial&quot;;
+	margin-bottom:120px;
 }</string>
-            </property>
-            <layout class="QGridLayout" name="videosLayout"/>
+                </property>
+                <layout class="QGridLayout" name="videosLayout">
+                 <property name="topMargin">
+                  <number>100</number>
+                 </property>
+                </layout>
+               </widget>
+              </item>
+             </layout>
+            </widget>
            </widget>
           </item>
          </layout>
