--- a/ui/ui.ui
+++ b/ui/ui.ui
@@ -7848,7 +7848,7 @@ border: 10px solid rgb(77, 77, 77);
                   </widget>
                  </item>
                  <item>
-                  <widget class="QPushButton" name="btnHwTest">
+                  <widget class="QPushButton" name="btnHwTesst">
                    <property name="font">
                     <font>
                      <family>Arial</family>
@@ -8078,6 +8078,9 @@ background-color: rgb(0, 0, 0);
 	font: 14pt &quot;Arial&quot;;
 	margin-top:20px;
 	margin-bottom:100px;
+}
+QPushButton:pressed{
+    border:5px solid red;
 }</string>
                 </property>
                 <layout class="QGridLayout" name="videosLayout">
